# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: cli_main.py  gui_main.py  index.py  introduction.py  salattu  testi.txt  ui.py
src/controllers/: file_controller.py  password_controller.py
src/encryption/: decryptor.py  encryptor.py  key_manager.py
src/tests/: encryption_test.py
