[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Palmroth",email = "matias.palmroth@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)"
]
